# swagger.json
@@ -95,7 +95,7 @@
         }
       }
     },
-    "/:username": {
+    "/{username}": {
       "put": {
         "summary":
           "Change a user's username and/or password by an admin or the user",
@@ -123,7 +123,37 @@
             "description": "Unauthorized"
           },
           "500": {
-            "description": "<user> is not found."
+            "description": "user01 is not found."
+          }
+        }
+      }
+    },
+    "/{username}/logout": {
+      "put": {
+        "summary":
+          "Change the availability of the user to unavailable",
+        "tags": ["users"],
+        "parameters": [
+          {
+            "name": "{username}/logout",
+            "in": "path",
+            "required": true,
+            "description": "Change the availability of the user to unavailable",
+            "schema": {
+              "example": {
+                "username": "newUser01",
+                "passsword": "new_password01"
+              },
+              "type": "path"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Null response"
+          },
+          "401": {
+            "description": "Unauthorized"
           }
         }
       }
